--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,74 @@
-/* Reset some default styles */
+/* Reset default styles */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
+
+:root {
+    --primary-color: #515151;
+    --secondary-color: #f4f4f4;
+    --text-color: #333;
+    --font-family: 'Arial', sans-serif;
+    --border-radius: 8px;
+}
+
+html {
+    background: #f5f5f5;
+}
+
+.flexbox-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Center calculator in full viewport */
+}
+
+#calculator {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; 
+    width: 300px;
+    border-radius: 25px;
+}
+
+#calculator button {
+    flex: 1 1 calc(25% - 10px); /* Ensures 4 buttons per row */
+    width: 60px;
+    height: 60px; 
+    background: #143275;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    border: 0.5px solid #FFF;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+#calculator .number {
+    background: #D6D6D6
+}
+
+#calculator .action {
+    background: #858585
+}
+
+#calculator .zero {
+    flex: 1 1 calc(50% - 10px);
+    width: calc(50% - 10px); /* Adjust width */
+    
+}
+
+#screen{
+    width: 300px;
+    background: #858585;
+    text-align: right;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+#value{
+    font-size: 36px;
+    color: #F5F5F5;
+}
