--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ html {
     flex-wrap: wrap;
     justify-content: center; 
     width: 300px;
-    border-radius: 25px;
+    border: 5px solid black;
 }
 
 #calculator button {
@@ -60,15 +60,23 @@ html {
     
 }
 
-#screen{
+#display{
     width: 300px;
     background: #858585;
     text-align: right;
     padding: 20px;
+    border: 5px solid black;
     border-radius: 5px;
 }
 
 #value{
-    font-size: 36px;
+    font-size: 50px;
     color: #F5F5F5;
+    font-family: var(--font-family);
+}
+
+#liveCalc{
+    font-size: 18px;
+    color: #333;
+    font-family: var(--font-family);
 }
